# smile-python

./: .travis.yml  README.md  readthedocs.yml  setup.cfg
docs/: Makefile  api.rst  build_requirments.txt  conf.py  index.rst
smile/: algorithm.py  analysis.py  area.py  array.py  filter.py  frames.py  helpers.py  nodes.py  result.py  results.py  visualization.py
smile/algorithms/tdoa/: chan_ho.py  doan_vesely.py  fang.py
smile/algorithms/tof/: foy.py
smile/platform/: json_configuration.py  smile_analyze.py  smile_dump_json.py  smile_simulate.py
smile/resources/simulations/basic_area/: analyze_configuration.json
smile/resources/tests/platform_json_parser/: cyclical_import_bottom.json  cyclical_import_middle.json  disjoint_top.json  override_middle.json  override_top.json
smile/scripts/: smile_analyze.py
smile/tests/: test_algorithms_common.py  test_algorithms_tdoa_chan_ho.py  test_algorithms_tdoa_doan_vesely.py  test_algorithms_tdoa_fang.py  test_analysis.py  test_area.py  test_array.py  test_filter.py  test_frames.py  test_nodes.py  test_platform_json_parser.py  test_result.py  test_results.py  test_visualization.py
smile/tests/platform_json_parser/: cyclical_import_middle.json  cyclical_import_top.json  disjoint_top.json  override_middle.json  override_top.json
