#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see http:#www.gnu.org/licenses/.
#

[metadata]
name = smile
version = 0.1
description = SMILe Analysis
author = Tomasz Jankowski
author_email = t.jankowski@pwr.edu.pl
license = file: LICENSE
url = https://github.com/goofacz/smile-python
download_url = https://github.com/goofacz/smile-python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
test_suite = smile.tests
include_package_data = True
install_requires = 
    cycler >= 0.10.0
    jsonmerge >= 1.5.1
    jsonschema >= 2.6.0
    kiwisolver >= 1.0.1
    matplotlib >= 2.2.3
    numpy >= 1.15.1
    pyparsing >= 2.2.0
    python-dateutil >= 2.7.3
    pytz >= 2018.5
    scipy >= 1.1.0
    Shapely >= 1.6.4.post2
    six >= 1.11.0

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    smile_analyze = smile.platform.smile_analyze:main
    smile_dump_json = smile.platform.smile_dump_json:main
    smile_simulate = smile.platform.smile_simulate:main